@@ -4,6 +4,8 @@ Change log for zeit.web
 2.59 (unreleased)
 -----------------
 
+- MAINT: Introduce `request.user` object, created once per request
+
 - FIX: Only consider usable max-height for responsive images,
        fixes printkiosk teaser images
 
